# flock

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/models/: cone.fbx  cube.fbx  cube.ply  cylinder.fbx  noise_plane.mtl  noise_terrain.mtl  plane.fbx  plane1.fbx  plane100.fbx  smooth_teapot.dae  sphere.fbx  suzane.dae  teapot.dae  teapot_adjust.dae
assets/shaders/: debug_f.glsl  f.glsl  f_color.glsl  f_debug_depth.glsl  f_framebuffer.glsl  f_red.glsl  f_reflection.glsl  f_refraction.glsl  f_simple.glsl  f_simple_texture.glsl  old_f_color.glsl  raymarch_fragment.glsl  raymarch_vertex.glsl  v.glsl  v_particle.glsl  v_simple.glsl
src/: main.cpp
src/ecs/: ecs.cpp  ecs.hpp
src/ecs/components/: cloth_component.hpp  cubemap_component.hpp  debug_mesh_component.hpp  edit_component.hpp  edit_stub_component.hpp  fabrik_component.hpp  id_component.hpp  material_component.hpp  mesh_component.hpp  perlin_noise_component.hpp  physics_shape_component.hpp  rigid_body_component.hpp  shader_component.hpp  tag_component.hpp  transform_component.hpp  vertex_edit_stub_component.hpp
src/ecs/systems/: editmode_system.hpp  gui_system.hpp  ik_system.hpp  movement_system.hpp  physics_system.hpp  picking_system.hpp  render_system.hpp  xpbd_system.hpp
src/event_bus/: event.hpp  event_bus.hpp
src/events/: collision_event.hpp  rigidbody_changed_event.hpp
src/game/: game.cpp  game.hpp
src/integration/SO/: file_dialog.cpp  file_dialog.hpp
src/log/: logger.cpp  logger.hpp
src/node_graph/: base_node.hpp  connection.hpp  node_factory.hpp  node_graph.cpp  node_graph.hpp  node_type.hpp  node_ui.cpp  node_ui.hpp  output_node.cpp  output_node.hpp
src/physics/: body.cpp  body.hpp  shape.cpp  shape.hpp  world.cpp  world.hpp
src/render/: Shader.cpp  Shader.hpp  camera.cpp  camera.hpp  display.cpp  display.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/render/light/: base_light.cpp  base_light.hpp  directional_light.hpp  point_light.hpp  spot_light.hpp
src/texture/: texture.cpp  texture.hpp
src/ui/: imgui_config.h  imgui_config.hpp
src/utils/: mesh_exporter.hpp  perlin_noise.cpp  perlin_noise.hpp
